--- a/GrahpViewer/src/main/resources/com/GenSci/tools/GrahpViewer/primary.fxml
+++ b/GrahpViewer/src/main/resources/com/GenSci/tools/GrahpViewer/primary.fxml
@@ -2,25 +2,33 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="528.0" prefWidth="765.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GenSci.tools.GrahpViewer.PrimaryController">
-   <center>
-      <Canvas fx:id="canvas" height="405.0" width="763.0" BorderPane.alignment="CENTER" />
-   </center>
-   <top>
-      <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1100.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.GenSci.tools.GrahpViewer.PrimaryController">
+   <children>
+      <ToolBar prefHeight="40.0" prefWidth="1280.0">
         <items>
-            <Button fx:id="openBtn" mnemonicParsing="false" onAction="#openAction" text="open..." />
-          <Button fx:id="execBtn" mnemonicParsing="false" onAction="#execAction" text="Exce" />
-            <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#saveAction" text="Save..." />
+          <Button fx:id="openAveBtn" mnemonicParsing="false" onAction="#openAveFile" text="openAve" />
+            <Button fx:id="openTypeBtn" mnemonicParsing="false" onAction="#openTypeFile" text="openType" />
+            <Button fx:id="drawBtn" mnemonicParsing="false" onAction="#execAction" text="Draw" />
+            <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#saveAction" text="save" />
             <Button fx:id="quitBtn" mnemonicParsing="false" onAction="#quitAction" text="quit" />
+            <Label text="exp:" />
+            <Spinner fx:id="expSpinner" editable="true" />
         </items>
       </ToolBar>
-   </top>
-   <bottom>
-      <TextArea fx:id="log" prefHeight="81.0" prefWidth="765.0" BorderPane.alignment="CENTER" />
-   </bottom>
-</BorderPane>
+      <Canvas fx:id="aveCanvas" height="460.0" layoutY="40.0" width="1280.0" />
+      <Separator layoutY="520.0" prefHeight="17.0" prefWidth="1280.0" />
+      <Canvas fx:id="typeCanvas" height="445.0" layoutY="537.0" width="1280.0" />
+      <TextArea fx:id="log" layoutX="3.0" layoutY="999.0" prefHeight="93.0" prefWidth="1274.0" />
+      <Slider fx:id="typeSlider" layoutX="126.0" layoutY="985.0" prefHeight="14.0" prefWidth="1106.0" />
+      <Slider fx:id="aveSlider" layoutX="126.0" layoutY="513.0" prefHeight="14.0" prefWidth="1106.0" />
+   </children>
+</Pane>
